// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover popover body transform propery otherwise renders popover with correct transform style 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="rightBottom"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={true}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
          <div
            className="react-popover arrow arrow-right-bottom"
            style={Object {}}
          >
            <div
              className="react-popover-wrapper"
            >
              <p>
                popover message
              </p>
              <div
                className="react-popover-cta"
              >
                <button
                  className="btn-confirm-delete"
                  onClick={[Function]}
                >
                  delete
                </button>
                <a
                  className="react-popover-cancel"
                  href=""
                  onClick={[Function]}
                >
                  Cancel
                </a>
              </div>
              <a
                className="react-popover-close"
                href=""
                onClick={[Function]}
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;

exports[`Popover popover body transform propery when arrowPosition is topCenter renders popover with correct transform style 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="topCenter"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={true}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
          <div
            className="react-popover arrow arrow-top-center"
            style={Object {}}
          >
            <div
              className="react-popover-wrapper"
            >
              <p>
                popover message
              </p>
              <div
                className="react-popover-cta"
              >
                <button
                  className="btn-confirm-delete"
                  onClick={[Function]}
                >
                  delete
                </button>
                <a
                  className="react-popover-cancel"
                  href=""
                  onClick={[Function]}
                >
                  Cancel
                </a>
              </div>
              <a
                className="react-popover-close"
                href=""
                onClick={[Function]}
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;

exports[`Popover popover body transform propery when arrowPosition is topRight renders popover with correct transform style 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="topRight"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={true}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
          <div
            className="react-popover arrow arrow-top-right"
            style={Object {}}
          >
            <div
              className="react-popover-wrapper"
            >
              <p>
                popover message
              </p>
              <div
                className="react-popover-cta"
              >
                <button
                  className="btn-confirm-delete"
                  onClick={[Function]}
                >
                  delete
                </button>
                <a
                  className="react-popover-cancel"
                  href=""
                  onClick={[Function]}
                >
                  Cancel
                </a>
              </div>
              <a
                className="react-popover-close"
                href=""
                onClick={[Function]}
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;

exports[`Popover renders the popover with hide class applied by default 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="bottomRight"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={false}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;

exports[`Popover renders the popover without the hide class when open props is passed in 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="bottomRight"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={true}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
          <div
            className="react-popover arrow arrow-bottom-right"
            style={Object {}}
          >
            <div
              className="react-popover-wrapper"
            >
              <p>
                popover message
              </p>
              <div
                className="react-popover-cta"
              >
                <button
                  className="btn-confirm-delete"
                  onClick={[Function]}
                >
                  delete
                </button>
                <a
                  className="react-popover-cancel"
                  href=""
                  onClick={[Function]}
                >
                  Cancel
                </a>
              </div>
              <a
                className="react-popover-close"
                href=""
                onClick={[Function]}
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;

exports[`Popover renders with different arrowPosition 1`] = `
<Popover
  actionButton={
    <button
      className="btn-confirm-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  arrowPosition="leftTop"
  closeOnOutsideClick={true}
  hasCancelLink={true}
  hasCloseButton={true}
  left="200px"
  open={true}
  style={Object {}}
  target={
    <button
      className="btn-delete"
      onClick={[Function]}
    >
      delete
    </button>
  }
  toggable={true}
  top="100px"
>
  <OutsideClickWrapper
    onOutsideClick={[Function]}
  >
    <div>
      <div
        className="react-popover-container"
      >
        <div
          className="react-popover-body"
        >
          <div
            onClick={[Function]}
          >
            <button
              className="btn-delete"
              onClick={[Function]}
            >
              delete
            </button>
          </div>
          <div
            className="react-popover arrow arrow-left-top"
            style={Object {}}
          >
            <div
              className="react-popover-wrapper"
            >
              <p>
                popover message
              </p>
              <div
                className="react-popover-cta"
              >
                <button
                  className="btn-confirm-delete"
                  onClick={[Function]}
                >
                  delete
                </button>
                <a
                  className="react-popover-cancel"
                  href=""
                  onClick={[Function]}
                >
                  Cancel
                </a>
              </div>
              <a
                className="react-popover-close"
                href=""
                onClick={[Function]}
              >
                <span
                  className="glyphicon glyphicon-remove"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </OutsideClickWrapper>
</Popover>
`;
